apps/chains/polygon/service-p2p.yaml
apiVersion: v1
kind: Service
metadata:
  name: polygon-p2p
  namespace: polygon
  labels:
    app.kubernetes.io/name: polygon
    app.kubernetes.io/component: p2p
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: polygon
  ports:
    - name: p2p-tcp
      port: 30303
      targetPort: p2p-tcp
      protocol: TCP
    - name: p2p-udp
      port: 30303
      targetPort: p2p-udp
      protocol: UDP
